[BEM] - Extracted list as block

--- a/src/scss/mobile/blocks/exports.scss
+++ b/src/scss/mobile/blocks/exports.scss
@@ -2,6 +2,7 @@
 @import "badge/badge";
 @import "separator/separator";
 @import "button/button";
+@import "list/list";
 @import "week-calendar/week-calendar";
 @import "checkbox/checkbox";
 @import "header/header";
