--- a/src/scss/mobile/blocks/exports.scss
+++ b/src/scss/mobile/blocks/exports.scss
@@ -1,3 +1,4 @@
+@import "page/page";
 @import "icon/icon";
 @import "badge/badge";
 @import "separator/separator";
@@ -6,5 +7,5 @@
 @import "week-calendar/week-calendar";
 @import "checkbox/checkbox";
 @import "header/header";
-@import "task-list/task-list";
+@import "task-item/task-item";
 @import "body";
