[BEM] - Simplifyed layout of scss/mobile/blocks

--- a/src/scss/mobile/blocks/exports.scss
+++ b/src/scss/mobile/blocks/exports.scss
@@ -1,11 +1,12 @@
-@import "page/page";
-@import "icon/icon";
-@import "badge/badge";
-@import "separator/separator";
-@import "button/button";
-@import "list/list";
-@import "week-calendar/week-calendar";
-@import "checkbox/checkbox";
-@import "header/header";
-@import "task-item/task-item";
 @import "body";
+@import "page";
+@import "icon";
+@import "badge";
+@import "separator";
+@import "button";
+@import "list";
+@import "checkbox";
+
+@import "header";
+@import "week-calendar";
+@import "task-item";
