[BEM] - Added default font and _small modifyer

--- a/src/scss/mobile/_vars.scss
+++ b/src/scss/mobile/_vars.scss
@@ -1,3 +1,4 @@
 $header-size: 44px;
-$task-list-item-height: 55px;
+$list-item-height: 55px;
+$list-item_small-height: 44px;
 $mobile-min-width: 320px;
