--- a/src/scss/mobile/blocks/list-item.scss
+++ b/src/scss/mobile/blocks/list-item.scss
@@ -2,8 +2,15 @@
   display: block;
   width: 100%;
 
-  height: $task-list-item-height;
+  height: $list-item-height;
   color: $gray-scale-5;
   background-color: $gray-scale-0;
   border-bottom: 1px solid $gray-scale-2;
+
+  @include font-regular(15px);
+  text-transform: capitalize;
+
+  &_small {
+    height: $list-item_small-height;
+  }
 }
