--- a/src/scss/core/icons/_mixins.scss
+++ b/src/scss/core/icons/_mixins.scss
@@ -12,3 +12,33 @@
     @include retina-sprite($icon-group);
   }
 }
+
+@mixin before-icon-center($icon-group, $container-width, $container-height) {
+  position: relative;
+  $icon: nth($icon-group, 2);
+  $icon-width: nth($icon, 5);
+  $icon-height: nth($icon, 6);
+  &:before {
+    content: "";
+    position: absolute;
+    left: ($container-width - $icon-width) / 2;
+    top: ($container-height - $icon-height) / 2;
+    @extend .icon;
+    @include retina-sprite($icon-group);
+  }
+}
+
+@mixin after-icon-center($icon-group, $container-height, $right-offset) {
+  position: relative;
+  $icon: nth($icon-group, 2);
+  $icon-width: nth($icon, 5);
+  $icon-height: nth($icon, 6);
+  &:after {
+    content: "";
+    position: absolute;
+    right: $right-offset;
+    top: ($container-height - $icon-height) / 2;
+    @extend .icon;
+    @include retina-sprite($icon-group);
+  }
+}
