--- a/src/scss/mobile/blocks/task-item.scss
+++ b/src/scss/mobile/blocks/task-item.scss
@@ -49,6 +49,11 @@
       margin-top: 4px;
     }
 
+    &_project .badge {
+      margin-left: 1px;
+      margin-right: 2px;
+    }
+
     &_date {
       @include before-icon($icon-today-group);
     }
