--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,8 @@
 $width: 320px;
 $height-header: 44px;
-$height-tasks: 56px;
+$height-tasks-item: 56px;
 
+$bdr-projects-item: #eaeef2;
 $bg-navigation: #f1f3f6;
 $item-border: #d3dbe4;
 $gray2: #ced3da;
@@ -57,6 +58,7 @@ $bg-btn-start: $project-color3;
 @import 'reset';
 @import 'header';
 @import 'tasks';
+@import 'menu';
 
 
 
