[BEM] - Changed header positioning to absolute

--- a/src/scss/mobile/blocks/header.scss
+++ b/src/scss/mobile/blocks/header.scss
@@ -13,7 +13,7 @@ $header-text-color: $gray-scale-4;
 
 .header {
   display: table;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
