Completed project-list template

--- a/src/scss/block-head.scss
+++ b/src/scss/block-head.scss
@@ -1,8 +1,5 @@
 .head {
     height: 44px;
-    margin: 0 auto;
-    max-width: 320px;
-    width: 100%;
     text-align: center;
     box-sizing: border-box;
     &--nav {
@@ -15,6 +12,7 @@
         display: inline-block;
         box-sizing: border-box;
         height: 100%;
+        cursor: pointer;
         &__text {
             text-transform: uppercase;
             font-family: EncodeSansWide-DemiBold;
