--- a/src/scss/block-list.scss
+++ b/src/scss/block-list.scss
@@ -1,3 +1,7 @@
+.main {
+    
+}
+
 .list {
     &--checkbox {
 
@@ -21,7 +25,7 @@
 
             }
             &__estimation {
-                
+
             }
         }
     }
