--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -7,6 +7,7 @@
         margin: 12px;
         padding: 5px 0px;
         background: transparent;
+        cursor: pointer;
         &::before {
           content: "";
           position: absolute;
@@ -50,6 +51,7 @@
         padding: 0px;
         margin: 0px;
         border: 0px;
+        cursor: pointer;
         &::after{
             content: "";
             display: block;
