[Create html layouts] Complited list.html

--- a/src/scss/block-head.scss
+++ b/src/scss/block-head.scss
@@ -29,4 +29,8 @@
         background: $blue-color;
         color: $white-color;
     }
+    &_grey {
+        background: $grey-color;
+        color: $dark-grey-color;
+    }
 }
