--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,10 +1,14 @@
 $blue-color: rgb(11,152,218);
-$dark-blue-color :rgb(0,126,188);
+$grey-color: rgb(241,243,246);
+$dark-grey-color: rgb(170,180,191);
+$dark-blue-color: rgb(0,126,188);
 $white-color: rgb(255,255,255);
 $task-underline: rgb(210,219,229);
 $task-text-color: rgb(68,79,87);
 $task-category-color: rgb(170,180,191);
 $global-background: rgb(241,243,246);
+$project-color-green: rgb(0,197,158);
+$project-color-orange: rgb(244,111,23);
 
 @import "reset",
 "block-head",
