[BEM] - Changed button colorize and hover scheme

--- a/src/scss/core/branding/_vars.scss
+++ b/src/scss/core/branding/_vars.scss
@@ -15,6 +15,8 @@ $colors: (
         violet: $color-violet
 );
 
+$hover-color: rgba(170,180,190, .5);
+
 // gray scale
 $gray-scale-0: #FFF;
 $gray-scale-1: #F1F3F6;
