--- a/src/scss/mobile/blocks/task-item.scss
+++ b/src/scss/mobile/blocks/task-item.scss
@@ -3,7 +3,25 @@
   vertical-align: middle;
 }
 
+$task-item__button-width: 73px;
+
+%i-task-item__button {
+  @include font-bold(9px);
+  position: absolute;
+  box-sizing: border-box;
+  top: 0;
+  width: $task-item__button-width;
+  height: $list-item-height + 1px;
+  text-transform: uppercase;
+  border-left: 1px solid $gray-scale-0;
+
+  .icon {
+    margin-bottom: 5px;
+  }
+}
+
 .task-item {
+  position: relative;
   display: table;
   line-height: normal;
 
@@ -66,4 +84,31 @@
       @include before-icon($icon-access-time-group);
     }
   }
+
+  //region overlap buttons group
+
+  &__buttons {
+    display: none;
+
+    &_active {
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      background-color: $hover-color;
+    }
+  }
+
+  &__edit {
+    @extend %i-task-item__button;
+    right: $task-item__button-width;
+  }
+
+  &__start {
+    @extend %i-task-item__button;
+    right: 0;
+  }
+  //endregion
 }
