[BEM] - Change hover mixin

--- a/src/scss/core/branding/_mixins.scss
+++ b/src/scss/core/branding/_mixins.scss
@@ -5,7 +5,7 @@
 
 @mixin colorize-hover($bg-color) {
   &:hover {
-    background-color: darken($bg-color, 13%);
+    background-color: mix($bg-color, $hover-color);
   }
 }
 
