[Create html layouts] Complited week-task-list

--- a/src/scss/block-head.scss
+++ b/src/scss/block-head.scss
@@ -15,7 +15,7 @@
         cursor: pointer;
         &__text {
             text-transform: uppercase;
-            font-family: EncodeSansWide-DemiBold;
+            font-family: EncodeSansWide-SemiBold;
             font-size: 14px;
         }
     }
