[HTML Layouts] Change some styles

--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -1,3 +1,11 @@
+.menu {
+	position: relative;
+	width: $width-of-menu;
+	background-color: rgba(255,0,0,.3);
+	display: block;
+	float: left;
+
+}
 .menu-item {
 
 	background: url(../img/Triangle_1.png) right center no-repeat;
@@ -42,6 +50,8 @@
 		height: 44px;
 		line-height: 44px;
 		text-align: center;
+
+		border-bottom: 1px solid $bdr-projects-item;
 	}
 
 	&-item {
