--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,6 +11,10 @@ $project-color-green: rgb(0,197,158);
 $project-color-orange: rgb(244,111,23);
 $overview-block-date: rgb(170,180,191);
 $overview-block-space: rgb(241,243,246);
+$button-edit-color: rgb(0,197,158);
+$button-start-color: rgb(11,152,218);
+$hover-button-box: rgb(204,211,217);
+$hover-button-content: rgb(169,179,190);
 
 @import "reset",
 "block-head",
