--- a/src/scss/mobile/blocks/menu.scss
+++ b/src/scss/mobile/blocks/menu.scss
@@ -1,7 +1,8 @@
 .menu {
   display: block;
-  float: left;
   width: $menu-width;
+  min-width: $menu-width;
+  overflow-x: hidden;
   height: 100%;
   border-right: 1px solid $gray-scale-4;
 
