--- a/src/scss/mobile/blocks/page.scss
+++ b/src/scss/mobile/blocks/page.scss
@@ -1,3 +1,32 @@
 .page {
-  padding-top: $header-size;
+  display: table;
+  position: relative;
+  width: 100%;
+  min-width: $mobile-min-width;
+
+  &__header {
+    margin-left: $menu-width;
+  }
+
+  &__menu {
+
+  }
+
+  &__task-list {
+    position: relative;
+    display: table-cell;
+    vertical-align: top;
+    width: 100%;
+    overflow-x: hidden;
+    padding-top: $header-size;
+    min-width: $mobile-min-width;
+    &-overlap {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $hover-color;
+    }
+  }
 }
