[BEM] - Optimized scss layout - move generic styles to core/blocks; - move html tags styling in project/blocks/_reset

--- a/src/scss/core/exports.scss
+++ b/src/scss/core/exports.scss
@@ -3,4 +3,5 @@
 @import "fonts/exports";
 @import "branding/exports";
 @import "modifyers/exports";
+@import "blocks/exports";
 @include retina-sprites($retina-groups);
