[BEM] - Move font-family property from mixins to body in core/_reset

--- a/src/scss/core/exports.scss
+++ b/src/scss/core/exports.scss
@@ -3,5 +3,6 @@
 @import "fonts/exports";
 @import "branding/exports";
 @import "modifyers/exports";
+@import "reset";
 @import "blocks/exports";
 @include retina-sprites($retina-groups);
