--- a/src/scss/core/fonts/_vars.scss
+++ b/src/scss/core/fonts/_vars.scss
@@ -3,3 +3,5 @@ $fonts-root: '../fonts';
 $font-weight-regular: 400;
 $font-weight-semi-bold: 600;
 $font-weight-bold: 700;
+
+$font-family: EncodeSansWide, Helvetica, Arial, sans-serif;
