--- a/src/scss/project/blocks/header.scss
+++ b/src/scss/project/blocks/header.scss
@@ -1,13 +1,5 @@
 $header-text-color: $gray-scale-4;
 
-%header-button {
-  display: table-cell;
-  vertical-align: middle;
-  padding: 0;
-  width: $header-size;
-  max-width: $header-size;
-}
-
 .header {
   display: table;
   z-index: 100;
@@ -19,8 +11,12 @@ $header-text-color: $gray-scale-4;
   color: $gray-scale-4;
   background-color: $gray-scale-1;
 
-  &__menu-button {
-    @extend %header-button;
+  &__menu-button, &__add-task-button {
+    display: table-cell;
+    vertical-align: middle;
+    padding: 0;
+    width: $header-size;
+    max-width: $header-size;
   }
 
   &__title {
@@ -46,10 +42,6 @@ $header-text-color: $gray-scale-4;
       }
     }
 
-  }
-
-  &__add-task-button {
-    @extend %header-button;
   }
 }
 
