--- a/src/scss/project/_mixins.scss
+++ b/src/scss/project/_mixins.scss
@@ -1,9 +1,17 @@
 @mixin media-only-mobile() {
-  @media only screen and (max-width: $mobile-min-width) and (max-width: $mobile-max-width) { @content; }
+  @media only screen and (max-width: $mobile-max-width) { @content; }
+}
+
+@mixin media-mobile-tablet() {
+  @media only screen and (max-width: $tablet-max-width) { @content; }
 }
 
 @mixin media-only-tablet() {
-  @media only screen and (max-width: $tablet-min-width) and (max-width: $tablet-max-width) { @content; }
+  @media only screen and (min-width: $tablet-min-width) and (max-width: $tablet-max-width) { @content; }
+}
+
+@mixin media-tablet-desktop() {
+  @media only screen and (min-width: $tablet-min-width) { @content; }
 }
 
 @mixin media-only-desktop() {
