--- a/src/scss/project/_vars.scss
+++ b/src/scss/project/_vars.scss
@@ -13,4 +13,4 @@ $mobile-max-width: $menu-width + $mobile-min-width - 1px;
 $tablet-min-width: $mobile-max-width + 1px;
 $tablet-max-width: $tablet-min-width + 2 * $task-item__button-width - 1;
 
-$desktop-min-width: $tablet-min-width + 1px;
+$desktop-min-width: $tablet-max-width + 1px;
