[BEM] - Added media queries - Move header in page__main besides task-list

--- a/src/scss/project/_states.scss
+++ b/src/scss/project/_states.scss
@@ -1,12 +1,11 @@
 .page_menu {
 
   &_closed {
-    .page__header {
-      margin-left: 0;
-    }
 
     .page__menu {
-      display: none;
+      @include media-only-mobile{
+        display: none;
+      }
     }
 
     .page__task-list {
