--- a/src/scss/project/blocks/header.scss
+++ b/src/scss/project/blocks/header.scss
@@ -1,5 +1,12 @@
 $header-text-color: $gray-scale-4;
 
+%i-header__button {
+  vertical-align: middle;
+  padding: 0;
+  width: $header-size;
+  max-width: $header-size;
+}
+
 .header {
   display: table;
   z-index: 100;
@@ -11,12 +18,19 @@ $header-text-color: $gray-scale-4;
   color: $gray-scale-4;
   background-color: $gray-scale-1;
 
-  &__menu-button, &__add-task-button {
+  &__menu-button {
+    @extend %i-header__button;
+    @include media-only-mobile() {
+      display: table-cell;
+    }
+    @include media-tablet-desktop() {
+      display: none;
+    }
+  }
+
+  &__add-task-button {
+    @extend %i-header__button;
     display: table-cell;
-    vertical-align: middle;
-    padding: 0;
-    width: $header-size;
-    max-width: $header-size;
   }
 
   &__title {
@@ -41,7 +55,6 @@ $header-text-color: $gray-scale-4;
         @include retina-sprite($icon-create-group);
       }
     }
-
   }
 }
 
