--- a/src/scss/project/blocks/page.scss
+++ b/src/scss/project/blocks/page.scss
@@ -4,15 +4,11 @@
   width: 100%;
   min-width: $mobile-min-width;
 
-  &__header {
-    margin-left: $menu-width;
-  }
-
   &__menu {
 
   }
 
-  &__task-list {
+  &__main {
     position: relative;
     display: table-cell;
     vertical-align: top;
@@ -20,13 +16,21 @@
     overflow-x: hidden;
     padding-top: $header-size;
     min-width: $mobile-min-width;
+  }
+
+  &__task-list {
     &-overlap {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: $hover-color;
+      @include media-only-mobile() {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $hover-color;
+      }
+      @include media-tablet-desktop() {
+        display: none;
+      }
     }
   }
 }
