[BEM] - Remove 'demo only' states file, - moved _closed state from page to menu, - moved overlap from __task-list to __main

--- a/src/scss/project/blocks/menu.scss
+++ b/src/scss/project/blocks/menu.scss
@@ -30,4 +30,16 @@
   &__create-project {
     text-align: center;
   }
+
+  //region modifyers
+  @include media-only-mobile {
+
+    &_closed {
+      display: none;
+      + .page__main .page__main-overlap {
+        display: none;
+      }
+    }
+  }
+  //endregion
 }
