--- a/src/scss/project/blocks/page.scss
+++ b/src/scss/project/blocks/page.scss
@@ -16,12 +16,11 @@
     overflow-x: hidden;
     padding-top: $header-size;
     min-width: $mobile-min-width;
-  }
 
-  &__task-list {
     &-overlap {
       @include media-only-mobile() {
         position: absolute;
+        z-index: 9;
         top: 0;
         left: 0;
         width: 100%;
