--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -1,8 +1,15 @@
+.menu {
+	width: 272px;
+	//background: #f00;
+	position: absolute;
+	z-index: 7;
+}
 .menu-item {
 
 	background: url(../img/Triangle_1.png) right center no-repeat;
 	margin-right: 22px;
 	padding-left: 24px;
+	list-style: none;
 	//padding-right: 8px + 10px;
 
 	&_settings {
@@ -31,6 +38,15 @@
 		color: $color-text-dark;
 		line-height: 56px;
 		text-transform: uppercase;
+	}
+
+	&_today {
+		text-align: right;
+		padding-right: 10px;
+	}
+
+	&__name {
+		float: left;
 	}
 }
 
