[HTML Layouts] Change some styles and add some scripts for week-task-list.html

--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -60,6 +60,7 @@
 		height: 44px;
 		line-height: 44px;
 		text-align: center;
+    list-style: none;
 
 		border-bottom: 1px solid $bdr-projects-item;
 	}
@@ -73,6 +74,7 @@
 
 		line-height: 56px;
 		padding-left: 18px;
+    list-style: none;
 
 		border-left: 8px solid $bdr-projects-item;
 		border-bottom: 1px solid $bdr-projects-item;
