--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -71,13 +71,11 @@ html {
   width: $width;
   //height: 100%;
   padding-bottom: 100%;
-  //max-width: $width;
-  //padding-bottom: 100%;
   overflow-x: hidden;
   position: relative;
   //z-index: 15;
   //background-color: #00f;
-//  margin: 0 auto;
+  margin: 0 auto;
 }
 .block-wrapper {
   position: relative;
